# fizzbuzz

./: Fizzbuzz.cabal  Fizzbuzz.hs  Main.hs  README.md  Tests.hs  fizbuzz.hs
